<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageDetailActivity">
    <LinearLayout
        android:background="#ffff9f"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTextView"
                style="@style/CustomFontStyle"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:text="@string/detail_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/urlTextView1"
                style="@style/CustomFontStyle2"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:text="@string/detail_url" />

            <EditText
                android:id="@+id/urlEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/keywordsTextView"
                style="@style/CustomFontStyle"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:text="@string/detail_keywords" />

            <EditText
                android:id="@+id/keywordsEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView"
                style="@style/CustomFontStyle2"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:text="@string/detail_date" />

            <EditText
                android:id="@+id/dataEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailTextView"
                style="@style/CustomFontStyle"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:text="@string/detail_email" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ratingTextView"
                style="@style/CustomFontStyle2"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:text="@string/detail_rating" />

            <EditText
                android:id="@+id/ratingEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Save" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>